[package]
name = "wholock"
version = "0.0.1"
edition = "2021"
authors = ["Hellager"] 
repository = "https://github.com/Hellager/wholock-rs" 
documentation = "https://docs.rs/wholock/" 
readme = "README.md" 
license = "MIT" 
keywords = ["windows", "lock"] 
description = """ 
A rust crate helps you to find out who's locking your file on windows
"""

[dependencies]
