[package]
name = "wholock"
version = "0.0.1"
edition = "2021"
authors = ["Hellager"] 
repository = "https://github.com/Hellager/wholock-rs" 
documentation = "https://docs.rs/wholock/" 
readme = "README.md" 
license = "MIT" 
keywords = ["windows", "lock"] 
description = """ 
A rust crate helps you to find out who's locking your file on windows
"""

[dependencies]
env_logger = "0.11.6"
itertools = "0.14.0"
log = "0.4.22"
sysinfo = "0.33.1"
thiserror = "2.0.9"

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_UI_Shell", 
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Wdk_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Globalization",
    "Win32_System_Memory",
    "Win32_System_Com",
    "Win32_System_ProcessStatus",
    "Win32_System_WindowsProgramming"
]

[dev-dependencies]
tempfile = "3.15.0"

[target.'cfg(windows)']
runner = "powershell -Command Start-Process -Verb runAs -FilePath"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-gnu"
targets = ["x86_64-pc-windows-gnu", "x86_64-pc-windows-msvc"]
